--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<deploy-version>0.0.1-SNAPSHOT</deploy-version>
 		<zookeeper-version>3.4.6</zookeeper-version>
 		<jstl-version>1.2</jstl-version>
+		<jsp-version>2.2</jsp-version>
 		<servlet-version>3.1.0</servlet-version>
 		<glassfish-version>2.1.4</glassfish-version>
 		<cache-version>0.4</cache-version>
@@ -71,7 +72,12 @@
 			<artifactId>jstl</artifactId>
 			<version>${jstl-version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>${jsp-version}</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Spring -->
 		<!-- Spring MVC -->
 		<dependency>
